# zaphod

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  doxygen_filter.sh
docs/: Info.md  annotated.html  annotated_dup.js  app_8h_source.html  classEditorApp-members.html  classEditorApp.html  classes.html  classzaphod_1_1App-members.html  classzaphod_1_1App.html  classzaphod_1_1Flags-members.html  classzaphod_1_1Flags.html  classzaphod_1_1Window-members.html  classzaphod_1_1Window.html  classzaphod_1_1Window.js  classzaphod_1_1events_1_1EventBase-members.html  classzaphod_1_1events_1_1EventBase.html  classzaphod_1_1events_1_1LogEvent-members.html  classzaphod_1_1events_1_1LogEvent.html  classzaphod_1_1logging_1_1ErrorLogger-members.html  classzaphod_1_1logging_1_1ErrorLogger.html  classzaphod_1_1logging_1_1ErrorLogger.js  classzaphod_1_1logging_1_1Logger-members.html  classzaphod_1_1logging_1_1Logger.html  classzaphod_1_1logging_1_1Logger.js  classzaphod_1_1logging_1_1LoggerFactory-members.html  classzaphod_1_1logging_1_1LoggerFactory.html  classzaphod_1_1logging_1_1LoggerFactory.js  classzaphod_1_1logging_1_1Logger_1_1Format-members.html  classzaphod_1_1logging_1_1Logger_1_1Format.html  classzaphod_1_1logging_1_1Logger_1_1Format.js  classzaphod_1_1logging_1_1SimpleLogger-members.html  classzaphod_1_1logging_1_1SimpleLogger.html  classzaphod_1_1logging_1_1SimpleLogger.js  classzaphod_1_1logging_1_1SimpleLoggerFactory-members.html  classzaphod_1_1logging_1_1SimpleLoggerFactory.html  classzaphod_1_1logging_1_1SimpleLoggerFactory.js  dir_07800c8bc9e485b30bf8571db4a636e5.html  dir_07800c8bc9e485b30bf8571db4a636e5.js  dir_0e46f5226800bab206cbab255738a0f9.html  dir_0e46f5226800bab206cbab255738a0f9.js  (+48 more)
docs/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  (+11 more)
doxygen_files/: Info.md
editor/: CMakeLists.txt
editor/include/: editor.h
editor/src/: editor.cpp
engine/: CMakeLists.txt  spv_to_header.py  vcpkg.json
engine/include/core/: app.h  events.h  logger.h  stringify.h
engine/include/gui/: window.h
engine/include/util/: enum.h  flags.h  result.h
engine/src/core/: app.cpp  logger.cpp
engine/src/gui/: window.cpp
engine/src/shaders/: simple_shader.vert
